--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-feather": "^1.1.6",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
+    "react-slick": "^0.23.2",
     "styled-components": "^4.1.3"
   },
   "scripts": {
