--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-scripts": "2.1.8",
     "react-slick": "^0.23.2",
     "redux-devtools-extension": "^2.13.8",
+    "redux-first-router": "^2.1.2",
+    "redux-first-router-link": "^2.1.1",
     "redux-saga": "^1.0.2",
     "styled-components": "^4.1.3"
   },
