--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-feather": "^1.1.6",
+    "react-google-login": "^5.0.4",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "react-slick": "^0.23.2",
