--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "react-slick": "^0.23.2",
+    "react-toastify": "^5.3.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-first-router": "^2.1.2",
     "redux-first-router-link": "^2.1.1",
